# ape

./: Makefile  Makefile.am  Makefile.in  config.h  config.h.in  config.h.in~  config.status  configure  configure.ac
autom4te.cache/: output.0  output.1  output.2  requests  traces.0  traces.1  traces.2  traces.3
include/: Makefile  Makefile.in
include/ape/: Makefile.am  Makefile.in
src/: Makefile  Makefile.am  Makefile.in
src/pcheck/: Makefile.am  Makefile.in
src/pget/: Makefile.am  Makefile.in
src/plist/: Makefile.am  Makefile.in
src/pquery/: Makefile.am  Makefile.in
src/pquery2/: Makefile.am  Makefile.in
src/pset/: Makefile.am  Makefile.in
src/punlearn/: Makefile.am  Makefile.in
src/test/: Makefile.am
